--- a/billingservice/src/main/webapp/templates/bill/bill_zhifu.html
+++ b/billingservice/src/main/webapp/templates/bill/bill_zhifu.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -95,85 +95,9 @@
 <!--主要区域开始-->
 <div id="main">
     <form action="" method="">
-        <div class="layui-form">
-            <table class="layui-table">
-                <colgroup>
-                    <col width="150">
-                    <col width="150">
-                    <col width="200">
-                    <col>
-                </colgroup>
-                <thead>
-                <tr>
-                    <th>账单编号</th>
-                    <th>用户名</th>
-                    <th>身份证</th>
-                    <th>账务账号</th>
-                    <th>时间</th>
-                    <th>费用</th>
-                    <th>支付状态</th>
-                    <th>操作功能</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>贤心</td>
-                    <td>51012119990428157x</td>
-                    <td>123456</td>
-                    <td>1999-04-28</td>
-                    <td>99</td>
-                    <td>已支付</td>
-                    <td><button class="layui-btn layui-btn-primary">查看</button></td>
-                </tr>
-                <tr>
-                    <td>1</td>
-                    <td>贤心</td>
-                    <td>51012119990428157x</td>
-                    <td>123456</td>
-                    <td>1999-04-28</td>
-                    <td>99</td>
-                    <td>已支付</td>
-                    <td><button class="layui-btn layui-btn-primary">查看</button></td>
-                </tr>
-                <tr>
-                    <td>1</td>
-                    <td>贤心</td>
-                    <td>51012119990428157x</td>
-                    <td>123456</td>
-                    <td>1999-04-28</td>
-                    <td>99</td>
-                    <td>已支付</td>
-                    <td><button class="layui-btn layui-btn-primary">查看</button></td>
-                </tr>
-                <tr>
-                    <td>1</td>
-                    <td>贤心</td>
-                    <td>51012119990428157x</td>
-                    <td>123456</td>
-                    <td>1999-04-28</td>
-                    <td>99</td>
-                    <td>已支付</td>
-                    <td><button class="layui-btn layui-btn-primary">查看</button></td>
-                </tr>
-                <tr>
-                    <td>1</td>
-                    <td>贤心</td>
-                    <td>51012119990428157x</td>
-                    <td>123456</td>
-                    <td>1999-04-28</td>
-                    <td>99</td>
-                    <td>已支付</td>
-                    <td><button class="layui-btn layui-btn-primary">查看</button></td>
-
-                </tr>
-                </tbody>
-            </table>
-        </div>
-        <div id="test1" class="layui-col-md-offset3"></div>
-
+     <img src="../../static/images/77428716BF5966CE7274576C9CE612DA.jpg" alt=""/>
     </form>
-    <a href="bill_zhifu.html"> <button class="layui-btn layui-btn-primary">支付</button></a>
+    <a href="bill_list.html"> <button class="layui-btn layui-btn-primary">返回</button></a>
 </div>
 <!--主要区域结束-->
 <div id="footer">
@@ -182,16 +106,5 @@
     <span>版权所有(C)全宇宙最帅组集团公司 </span>
 </div>
 </body>
-<script>
 
-    layui.use('laypage', function(){
-        var laypage = layui.laypage;
-
-        //执行一个laypage实例
-        laypage.render({
-            elem: 'test1' //注意，这里的 test1 是 ID，不用加 # 号
-            ,count: 50 //数据总数，从服务端得到
-        });
-    });
-</script>
 </html>
