--- a/billingservice/src/main/webapp/templates/login.html
+++ b/billingservice/src/main/webapp/templates/login.html
@@ -40,7 +40,7 @@
                 <div class="layui-col-md-offset3"><header class="layui-elip" >用户登录</header></div>
                 <br>
 
-                <form class="layui-form" action="billingservice/login" method="post">
+                <form class="layui-form" action="" method="post">
                     <div class="layui-form-item">
                         <label class="layui-form-label">用户名：</label>
                         <div class="layui-input-block">
@@ -66,14 +66,14 @@
                             <input name="user" value="管理员" title="管理员" type="radio" >
                             <div class="layui-unselect layui-form-radio">
                                 <i class="layui-anim layui-icon "></i><div>管理员</div></div>
-                            <a href="telLogin.html" class="sj">手机验证登录</a>
+                            <a href="" class="sj">手机验证登录</a>
                         </div>
 
                     </div>
                     <div class="layui-form-item layui-col-md-offset3">
                         <label class="layui-form-label"></label>
                         <!--<button class="layui-btn layui-btn-lg btn-center" type="submit">登录</button>-->
-                        <a class="layui-btn layui-btn-lg layui-btn-normal" href="testindex.html">确认登录</a>
+                        <a class="layui-btn layui-btn-lg layui-btn-normal" href="index.html">确认登录</a>
                     </div>
 
 
