--- a/billingservice/src/main/webapp/templates/styles/index.css
+++ b/billingservice/src/main/webapp/templates/styles/index.css
@@ -39,7 +39,9 @@ ul {
     text-align: center;
     padding: .25em;
 }
-
+menu{
+    z-index: 9999;
+}
 menu, menu label {
     position: absolute;
     top: 0;
