--- a/billingservice/src/main/webapp/templates/report/report_list.html
+++ b/billingservice/src/main/webapp/templates/report/report_list.html
@@ -6,9 +6,10 @@
     <link type="text/css" rel="stylesheet" media="all" href="../styles/global.css" />
     <link type="text/css" rel="stylesheet" media="all" href="../styles/global_color.css" />
     <link type="text/css" rel="stylesheet" href="../../static/layui/css/layui.css" media="all" />
-    <link type="text/css" rel="stylesheet"href="../styles/index.css">
+    <link type="text/css" rel="stylesheet"href="../styles/index1.css">
     <script type="text/javascript" src="../../static/js/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="../../static/layui/layui.js"></script>
+    <script src="../../static/js/index.js"></script>
     <script language="javascript" type="text/javascript">
         function changeTab(e,ulObj) {
             var obj = e.srcElement || e.target;
@@ -26,10 +27,7 @@
         }
     </script>
     <style>
-        #report_main{
-            margin: auto;
 
-        }
 
         .layui-btn bv{
             position: absolute;
@@ -47,48 +45,60 @@
 </head>
 <body>
 <!--Logo区域开始-->
-<div id="header">
-    <img src="../../static/images/logo.png" alt="logo" class="left"/>
-    <a href="#">[退出]</a>
-</div>
-<!--Logo区域结束-->
-<!--导航区域开始-->
-<menu>
-    <label for="trigger">
-        <input id="trigger" type="checkbox" />
-        <section class="drawer-list">
-            <ul>
-                <li><a href="../testindex.html">主页</a></li>
-                <li><a href="../role/role_list.html">角色管理</a></li>
-                <li><a href="../admin/admin_list.html">管理员</a></li>
-                <li><a href="../fee/fee_list.html">资费管理</a></li>
-                <li><a href="../account/account_list.html">账务账号</a></li>
-                <li><a href="../service/service_list.html">业务账号</a></li>
-                <li><a href="../bill/bill_list.html">账单管理</a></li>
-                <li><a href="../report/report_list.html">报表</a></li>
-                <li><a href="../user/user_info.html">个人信息</a></li>
-                <li><a href="../user/user_modi_pwd.html">修改密码</a></li>
+<nav>
+    <menu>
+        <menuitem id="demo1">
+            <a>菜单</a>
+            <menu>
+                <menuitem><a href="../index.html">主页</a></menuitem>
+                <menuitem>
+                    <a href="../role/role_list.html">用户管理</a>
+                    <menu>
+                        <menuitem><a href="../account/account_list.html">账务账号管理</a></menuitem>
+                        <menuitem><a href="../service/service_list.html">业务账号管理</a></menuitem>
+                    </menu>
+                </menuitem>
+                <menuitem><a href="../report/report_list.html">报表查询</a></menuitem>
+                <menuitem id="demo2">
+                    <a>前台日志</a>
+                    <menu>
+                        <menuitem id="demo3">
+                            <a href="../login/login_rizi.html">登录日志</a>
+                            <!--  <menu>
+                                  <menuitem><a>deep 1</a></menuitem>
+                                  <menuitem><a>deep 2</a></menuitem>
+                                  <menuitem><a>deep 3</a></menuitem>
+                              </menu>-->
+                        </menuitem>
+                        <menuitem><a href="../login/login_caozuo.html">操作日志</a></menuitem>
+                    </menu>
+                </menuitem>
+                <menuitem>
+                    <a>权限管理</a>
+                    <menu>
+                        <menuitem><a href="../role/role_list.html">角色管理</a></menuitem>
+                        <menuitem><a href="../role/role_modi.html">权限管理</a></menuitem>
+                    </menu>
+                </menuitem>
+                <menuitem><a href="../account/account_list.html">账务查询</a></menuitem>
+                <menuitem><a href="../bill/bill_list.html">账单查询</a></menuitem>
+                <menuitem><a href="../fee/fee_list.html">资费查询</a></menuitem>
+                <menuitem><a href="../admin/admin_list.html">管理员管理</a></menuitem>
+                <menuitem><a href="../user/user_modi_pwd.html">修改密码</a></menuitem>
 
-            </ul>
-        </section>
-        <hamburger>
-            <i></i>
-            <text>
-                <close>close</close>
-                <open>菜单</open>
-            </text>
-        </hamburger>
-    </label>
-</menu>
+
+            </menu>
+        </menuitem>
+
+
+        <!--   <menuitem><a>no drop</a></menuitem>-->
+    </menu>
+</nav>
+
+
 <!--主要区域开始-->
-<div id="report_main">
-    <div class="tabs">
-        <ul onclick="changeTab(event,this);">
-            <li><a href="#####" class="tab_on" title="每位客户每月的累计时长">客户使用时长</a></li>
-            <li><a href="#####" class="tab_out" title="每台服务器上累计时长最高的前三名客户">时长排行榜</a></li>
-            <li><a href="#####" class="tab_out" title="每台服务器每种资费标准的使用次数">资费使用率</a></li>
-        </ul>
-    </div>
+<div id="main">
+
     <div class="report_box">
         <div class="layui-col-md12">
 
@@ -111,90 +121,7 @@
                 <button class="layui-btn so" data-type="reload" id="so">搜索</button>
             </div>
         </div>
-        <!--数据区域：用表格展示数据-->
-        <div id="report_data">
-            <table id="datalist" class="layui-table" lay-filter="demo">
-                <!--<tr>                            -->
-                <!--<th>账号 ID</th>-->
-                <!--<th>账务帐号</th>-->
-                <!--<th>客户名称</th>-->
-                <!--<th class="width200">身份证号码</th>-->
-                <!--<th>电话</th>-->
-                <!--<th class="width150">月份</th>-->
-                <!--<th class="width150">累积时长</th>-->
-                <!--</tr>                      -->
 
-            </table>
-            <table id="datalist1" style="display:none;">
-                <tr>
-                    <th class="width300">Unix 服务器IP</th>
-                    <th>账务帐号</th>
-                    <th>客户名称</th>
-                    <th class="width200">身份证号码</th>
-                    <th class="width150">累积时长</th>
-                </tr>
-                <tr>
-                    <td>192.168.0.20</td>
-                    <td>mary</td>
-                    <td>贾强</td>
-                    <td>220222020202020202</td>
-                    <td>106小时32分</td>
-                </tr>
-                <tr>
-                    <td>192.168.0.20</td>
-                    <td>tony</td>
-                    <td>米奇</td>
-                    <td>220222020202020202</td>
-                    <td>96小时32分</td>
-                </tr><tr>
-                <td>192.168.0.20</td>
-                <td>jecy</td>
-                <td>米妮</td>
-                <td>220222020202020202</td>
-                <td>16小时32分</td>
-            </tr>
-                <tr>
-                    <td>192.168.0.23</td>
-                    <td>mary</td>
-                    <td>贾强</td>
-                    <td>220222020202020202</td>
-                    <td>16小时32分</td>
-                </tr>
-            </table>
-            <table id="datalist2" style="display:none;">
-                <tr>
-                    <th class="width300">Unix 服务器IP</th>
-                    <th>包月</th>
-                    <th>套餐</th>
-                    <th>计时</th>
-                </tr>
-                <tr>
-                    <td>192.168.0.20</td>
-                    <td>345</td>
-                    <td>21</td>
-                    <td>34</td>
-                </tr>
-                <tr>
-                    <td>192.168.0.23</td>
-                    <td>32</td>
-                    <td>221</td>
-                    <td>314</td>
-                </tr>
-            </table>
-        </div>
-        <!--分页-->
-        <div id="pages">
-            <a href="#">首页</a>
-            <a href="#">上一页</a>
-            <a href="#" class="current_page">1</a>
-            <a href="#">2</a>
-            <a href="#">3</a>
-            <a href="#">4</a>
-            <a href="#">5</a>
-            <a href="#">下一页</a>
-            <a href="#">末页</a>
-        </div>
-    </div>
 </div>
 <!--主要区域结束-->
 <!--主要区域结束-->
