--- a/billingservice/src/main/webapp/templates/service/test.html
+++ b/billingservice/src/main/webapp/templates/service/test.html
@@ -3,9 +3,9 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <link type="text/css"rel="stylesheet"href="../../static/layui/css/layui.css" media="all">
-    <script type="text/javascript"src="../../static/js/jquery-3.3.1.min.js"></script>
-    <script type="text/javascript"src="../../static/layui/layui.js"></script>
+    <link type="text/css"rel="stylesheet"href="../static/layui/css/layui.css" media="all">
+    <script type="text/javascript"src="../static/js/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript"src="../static/layui/layui.js"></script>
     <style type="text/css">
         .demoTable {
             margin-top: 10%;
